# snowman-consensus-sim

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
centralized_gossip/: protocols.py
config/: config.py
consensus/: protocols.py
data/: flare_params.txt
engine/: slush_test.py
go-scripts/: README.md
go-scripts/1.9.1/: README.md  consensus_modified_performance_test.go  tree.go  tree.md  tree_helper.go  tree_poll_test.go  tree_visualization_test.go
gossip/config/: config.py
gossip/snow/: README.md
gossip/snow/consensus/: snowflake.py
gossip/snow/engine/: slush_test.py  snowball_test.py  snowflake_test.py
gossip/snow/node/: network.py  node.py
notebooks/: Untitled.ipynb  slush_protocol.ipynb  tests.ipynb
outputs/: lockstep_partial_finality.json
snow/: README.md
snow/consensus/: slush.py  snowball.py  snowflake.py
snow/engine/: slush_test.py  snowflake_test.py
snow/node/: network.py  node.py
src/: README.md  config.py
src/centralized_gossip/: README.md  protocols.py
src/config/: config.py
src/frostbyte/: main.py
src/frostbyte/core/: snowball.py
src/frostbyte/sampler/: __init__.py  sampler.py
src/frostbyte/simul/: __init__.py  runner.py
src/frostbyte/snowball/: __init__.py  lockstep.py  random_sampling.py  sampler.py  state.py
src/prompts/: snow-formatted-prompt.txt
src/snow/: config.py  main.py
src/snow/config/: __init__.py  snowball.py
src/snow/network/: __init__.py  base.py  lockstep.py  random_sampling.py
src/snow/node/: __init__.py  adversary.py  base.py  factory.py  node.py  type.py
src/snow/sampler/: __init__.py  base.py  uniform.py
src/snow/simulation/: __init__.py  metrics.py  runner.py
src/utils/: __init__.py  saver.py
tests/: adversary_node_test.py  honest_node_test.py  network_test.py  sampler_test.py
tests/frostbyte/: snowball_lockstep_test.py  snowball_random_sampling_test.py
tests/snow/: honest_node_test.py  network_test.py
