[project]
name = "snowman-consensus"
version = "0.1.0"
description = "A repository for simulating parts of the Snowman consensus protocol."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.7.2",
    "tqdm>=4.66.6",
    "typing>=3.10.0.0",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["notebooks", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "S105", "D401", "D104", "ANN401", "ISC003", "D107", "PGH003", "FBT001", "FBT002", "ISC001", "D100"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
include = ["src/"]
executionEnvironments = [
    { root = "src", extraPaths = ["src"] }
]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
disableBytesTypePromotions = true
reportUnusedClass = true
reportUnusedFunction = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportPrivateUsage = true
reportTypeCommentUsage = true
reportConstantRedefinition = true
reportDeprecated = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportMissingParameterType = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportInvalidStubStatement = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportImplicitOverride = true
reportShadowedImports = true
